user account safety and font changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       const firebaseApp = firebase.initializeApp(config);
       const firebaseDB = firebase.database();
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js" charset="utf-8"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js" charset="utf-8"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.js" charset="utf-8"></script>
 
     <!--  scripts -->
     <script charset="utf-8" src="js/nav.js"></script>
