--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           <i class="fa fa-comments-o fa-5x" aria-hidden="true"></i>
         </div>
         <div class="container-51 space-bottom-20px flex flex-center">
-          <p class="tag-text">Make your voice heard. <b>Get&nbsp;paid</b></p>
+          <p class="tag-text"><b>Get paid to test websites and apps.</b></p>
         </div>
         <div class="container-51 space-bottom-10px flex flex-center">
-          <p class="detail-text">Join Seattle's Civic User Testing Group to provide feedback about websites and apps created to help city residents.</p>
+          <p class="detail-text">As a member of Seattle's Civic User Testing Group, you’ll join a community of residents who are paid to test and provide feedback on technology created to help you.</p>
         </div>
         <div class="container-51 space-bottom-20px flex flex-center">
           <p class="detail-text">Because&nbsp;if&nbsp;it&nbsp;doesn't&nbsp;work&nbsp;for&nbsp;<em>you</em>, it&nbsp;doesn't&nbsp;work.</p>
@@ -68,26 +68,26 @@
           <p class="detail-text">You'll get a $20 Visa gift card for every test that you participate in.</p>
         </div>
         <div class="container-51 space-bottom-100px flex flex-center">
-          <a id="link-to-explainer" href="#explainer" class="inline-link-secondary minor-header">How Does It Work?</a>
+          <a id="link-to-explainer" href="#explainer" class="inline-link-secondary minor-header">Learn More</a>
         </div>
       </div>
       <div id="explainer" class="block-container flex align-center flex align-center flex-center flex-wrap color-text color-bg-secondary">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text ">How It Works:</h3>
+          <h3 class="tag-text ">How It Works</h3>
         </div>
         <div class="container-51 space-bottom-20px">
           <ul class="step-by-step">
-            <li class="detail-text space-bottom-20px">To sign up to become a tester, fill out the quick form below.</li>
-            <li class="detail-text space-bottom-20px">After you sign up, we'll begin sending you emails when there are testing opportunities. We'll ask you a few more questions about the technology you'll be testing, and you can let us know if you're available. Most testing sessions will take place at the Seattle Central Library or the University of Washington.</li>
-            <li class="detail-text space-bottom-20px">If you're selected for a testing session, you'll be guided through the session by a proctor to provide feedback on a civic website or an app.</li>
-            <li class="detail-text space-bottom-20px">After a completed testing session, you will receive a $20 Visa gift card.</li>
+            <li class="detail-text space-bottom-20px">Fill out the form below to sign up.</li>
+            <li class="detail-text space-bottom-20px">We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available.</li>
+            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities designed to get your feedback on technology that has been developed by the City of Seattle to help you, like a website or an app.</li>
+            <li class="detail-text space-bottom-20px">After you complete the test session, you will receive a $20 Visa gift card.</li>
             <li class="detail-text space-bottom-20px">You do <b>not</b> need to have any technology skills or experience to participate!</li>
           </ul>
         </div>
       </div>
       <div id="signup" class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary-transparentize-70-percent">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text ">How Do I Sign Up?</h3>
+          <h3 class="tag-text ">Joining the CUTGroup</h3>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">We’re looking for a diverse group of testers across Seattle. Sign up now, and tell your friends!</p>
@@ -104,7 +104,7 @@
       </div>
       <div id="entry-form" class="block-container flex align-center flex align-center flex-center flex-wrap color-text color-bg-secondary">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text">Sign Up:</h3>
+          <h3 class="tag-text">Sign Up</h3>
         </div>
 
         <div id="vueform" class="container-51">
