--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="container-51 space-bottom-20px">
           <ul class="step-by-step">
             <li class="detail-text space-bottom-20px">Fill out the form below to sign up.</li>
-            <li class="detail-text space-bottom-20px">We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available.</li>
-            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities designed to get your feedback on technology that has been developed by the City of Seattle to help you, like a website or an app.</li>
+            <li class="detail-text space-bottom-20px">We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available. Depending on the test, we may ask you some questions to determine if you're eligible.</li>
+            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities to get your feedback on a website or app developed by the City of Seattle for your benefit.</li>
             <li class="detail-text space-bottom-20px">After you complete the test session, you will receive a $20 Visa gift card.</li>
             <li class="detail-text space-bottom-20px">You do <b>not</b> need to have any technology skills or experience to participate!</li>
           </ul>
@@ -84,7 +84,7 @@
       </div>
       <div id="signup" class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary-transparentize-70-percent">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text ">Joining the CUTGroup</h3>
+          <h3 class="tag-text ">Join Us!</h3>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">We’re looking for a diverse group of testers across Seattle. Sign up now, and tell your friends!</p>
