--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <h3 class="tag-text ">Join Us!</h3>
         </div>
         <div class="container-51 space-bottom-20px">
-          <p class="detail-text">We’re looking for a diverse group of testers across Seattle. Sign up now, and tell your friends!</p>
+          <p class="detail-text">We’re looking for a diverse group of testers from across Seattle. Sign up now, and tell your friends!</p>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">In order to get the most of the CUTGroup tests, we have to have a fairly scientific take on who is part of the test and how they use technology. That’s why this form has some questions about where you live, what devices you have, and how you connect to the Internet. This helps us get the right mix of people to test a particular application and website.</p>
         </div>
         <div class="container-51 space-bottom-20px">
-          <p class="detail-text"><b>To sign up, fill out the form below.</b> After you complete the form, we will send you a confirmation email. If you live anywhere within the Seattle city limits, you are eligible to be a CUTGroup tester. After you have signed up, you’ll be part of the CUTGroup and will receive email notifications when we have new tests coming up.</p>
+          <p class="detail-text"><b>To sign up, fill out the form below.</b> After you complete the form, we will send you a confirmation email.</p>
         </div>
         <div class="container-51 space-bottom-100px flex flex-center">
           <a id="link-to-signup" href="#entry-form" class="inline-link-secondary minor-header">Sign Up Now</a>
