--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CUTGroup - Seattle</title>
+    <title>Seattle Civic User Testing Group</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
