--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="step-by-step">
             <li class="detail-text space-bottom-20px">Fill out the form below to sign up.</li>
             <li class="detail-text space-bottom-20px">We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available. Depending on the test, we may ask you some questions to determine if you're eligible.</li>
-            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities to get your feedback on a website or app developed by the City of Seattle for your benefit.</li>
+            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities to get your feedback on a website or app created by the City of Seattle for residents.</li>
             <li class="detail-text space-bottom-20px">After you complete the test session, you will receive a $20 Visa gift card.</li>
             <li class="detail-text space-bottom-20px">You do <b>not</b> need to have any technology skills or experience to participate!</li>
           </ul>
@@ -113,10 +113,10 @@
           <h3 class="tag-text ">About:</h3>
         </div>
         <div class="container-51 space-bottom-20px">
-          <p class="detail-text">Seattle’s Civic User Testing Group is a collaboration among <a href="http://openseattle.org/" class="inline-link-secondary transition-all-200">Open Seattle</a>, the <a href="https://ischool.uw.edu/" class="inline-link-secondary transition-all-200">University of Washington’s iSchool</a>, and the <a href="https://seattle.gov/" class="inline-link-secondary transition-all-200">City of Seattle</a>. We are currently piloting this initiative with technology created by the City of Seattle, and our goal is to expand the CUTGroup more broadly in 2018 to provide user testing for developers working on civic apps and websites.</p>
+          <p class="detail-text">Seattle’s Civic User Testing Group is a collaboration between <a href="http://openseattle.org/" class="inline-link-secondary transition-all-200">Open Seattle</a>, the <a href="https://ischool.uw.edu/" class="inline-link-secondary transition-all-200">University of Washington’s iSchool</a>, and the <a href="https://seattle.gov/" class="inline-link-secondary transition-all-200">City of Seattle</a>.</p>
         </div>
         <div class="container-51 space-bottom-20px">
-          <p class="detail-text">The results of all Seattle CUTGroup tests will be published, so that everyone can learn from our work. Testing sessions will be documented (while maintaining the privacy of individual testers). </p>
+          <p class="detail-text">The results of each test session will be posted online, to encourage transparency and information sharing. </p>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">Major thanks to <a href="http://www.cutgroup.org/index.html" class="inline-link-secondary transition-all-200">SmartChicago</a>, <a href="http://cutgroup.openoakland.org/" class="inline-link-secondary transition-all-200">Open Oakland</a>, <a href="http://cutgroup.miami/" class="inline-link-secondary transition-all-200">Open Miami</a>, and other CUTGroups across the country who have meticulously documented their own processes and results, making it possible for us to try this out here in Seattle.</p>
