Email address update

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h3 class="tag-text ">Contact:</h3>
         </div>
         <div class="container-51 space-bottom-100px">
-          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:hi@openseattle.com" class="inline-link transition-all-200">hi@openseattle.org</a>.</p>
+          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:hi@openseattle.com" class="inline-link transition-all-200">seattle.cutgroup@gmail.com</a>.</p>
         </div>
       </div>
       <div class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary">
