Updated email address

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
       <div id="about" class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary-gradient-2-transparentize-70-percent">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text ">About:</h3>
+          <h3 class="tag-text ">About</h3>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">Seattle’s Civic User Testing Group is a collaboration between <a href="http://openseattle.org/" class="inline-link-secondary transition-all-200">Open Seattle</a>, the <a href="https://ischool.uw.edu/" class="inline-link-secondary transition-all-200">University of Washington’s iSchool</a>, and the <a href="https://seattle.gov/" class="inline-link-secondary transition-all-200">City of Seattle</a>.</p>
@@ -127,10 +127,10 @@
       </div>
       <div id="contact" class="block-container flex align-center flex-center flex-wrap color-text color-bg-secondary">
         <div class="container-51 space-top-100px space-bottom-20px">
-          <h3 class="tag-text ">Contact:</h3>
+          <h3 class="tag-text ">Contact Us</h3>
         </div>
         <div class="container-51 space-bottom-100px">
-          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:hi@openseattle.com" class="inline-link transition-all-200">seattle.cutgroup@gmail.com</a>.</p>
+          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:seattle.cutgroup@gmail.com" class="inline-link transition-all-200">seattle.cutgroup@gmail.com</a>.</p>
         </div>
       </div>
       <div class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary">
