--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h3 class="tag-text ">About</h3>
         </div>
         <div class="container-51 space-bottom-20px">
-          <p class="detail-text">Seattle’s Civic User Testing Group is a collaboration between <a href="http://openseattle.org/" class="inline-link-secondary transition-all-200">Open Seattle</a>, the <a href="https://ischool.uw.edu/" class="inline-link-secondary transition-all-200">University of Washington’s iSchool</a>, and the <a href="https://seattle.gov/" class="inline-link-secondary transition-all-200">City of Seattle</a>.</p>
+          <p class="detail-text">Seattle’s Civic User Testing Group is a collaboration between <a href="http://openseattle.org/" class="inline-link-secondary transition-all-200">Open Seattle</a>, the <a href="https://ischool.uw.edu/" class="inline-link-secondary transition-all-200">University of Washington’s iSchool</a>, and the <a href="https://www.seattle.gov/tech/" class="inline-link-secondary transition-all-200">City of Seattle's Information Technology Department.</a>.</p>
         </div>
         <div class="container-51 space-bottom-20px">
           <p class="detail-text">The results of each test session will be posted online, to encourage transparency and information sharing. </p>
