community partners added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <nav id="section-nav" class="section-nav float-right space-right-20px">
         <a class="section-link gapped-text on-hover-border-bottom-text transition-all-200" href="#signup">How Do I Sign Up?</a>
         <a class="section-link gapped-text on-hover-border-bottom-text transition-all-200" href="#about">About</a>
+        <a class="section-link gapped-text on-hover-border-bottom-text transition-all-200" href="#partners">For Community Partners</a>
         <a class="section-link gapped-text on-hover-border-bottom-text transition-all-200" href="#contact">Contact</a>
       </nav>
       <div id="mobile-nav-button">
@@ -82,7 +83,7 @@
           <a id="link-to-signup" href="#entry-form" class="inline-link-secondary minor-header">Sign Up Now</a>
         </div>
       </div>
-      <div id="form" class="typeform-widget" data-url="https://seattlecutgroup.typeform.com/to/xLhUoG" style="width: 100%; height: 700px;"></div> 
+      <div id="form" class="typeform-widget" data-url="https://seattlecutgroup.typeform.com/to/xLhUoG" style="width: 100%; height: 700px;"></div>
       <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       <div id="about" class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary-gradient-2-transparentize-70-percent">
         <div class="container-51 space-top-100px space-bottom-20px">
@@ -101,12 +102,49 @@
           <p class="detail-text">If you’re a citizen, a member of government, or a developer, and you’re interested in getting more involved in civic technology, consider joining <a href="https://www.meetup.com/openseattle/" class="inline-link-secondary transition-all-200">Open Seattle Monthly Meetups</a>. Everyone is welcome!</p>
         </div>
       </div>
-      <div id="contact" class="block-container flex align-center flex-center flex-wrap color-text color-bg-secondary">
+      <div id="partners" class="block-container flex align-center flex-center flex-wrap color-text color-bg-secondary">
+        <div class="container-51 space-bottom-20px">
+          <div class="container-51 space-top-100px space-bottom-20px">
+            <h3 class="tag-text ">For Community Partners</h3>
+          </div>
+          <ul class="step-by-step space-bottom-20px">
+            <b><li class="detail-text space-bottom-20px">What is a Civic User Testing Group? How does this benefit my community?</li></b>
+            <p class="detail-text space-bottom-20px">Seattle residents rely on government and nonprofit websites and apps to access key information and resources, like utility accounts, housing assistance, permits, and library services. But they don’t always get the chance to provide feedback on that technology and how useful - and usable - it is for them. Seattle’s Civic User Testing Group (CUTGroup) aims to involve residents in the process of creating technology that’s intended to serve them, giving residents a voice and a chance to gain technology experience, while helping developers of this technology make it more effective.<br><br>Given its growing prominence in our daily lives, technology and its design has become a key opportunity to address principles of inclusivity, diversity and equity. Our mission with the Civic User Testing Group is to incorporate diverse voices in the development of technology designed for public use and to make sure all residents have the opportunity to participate. That’s why we’re reaching out to community leaders across the city.</p>
+            <b><li class="detail-text space-bottom-20px">How do residents participate?</li></b>
+            <p class="detail-text space-bottom-20px">To participate, residents fill out a form on the CUTGroup website to provide some details about their access to technology and demographic information. We contact them when a new testing opportunity is available, and if they participate in a test session, they will receive a $20 Visa gift card.</p>
+            <b><li class="detail-text space-bottom-20px">Do residents need any technology experience to participate?</li></b>
+            <p class="detail-text space-bottom-20px">No. We welcome residents with any level of technology experience, and we can provide testing devices (like a mobile phone or a laptop) for residents who don’t have one.</p>
+            <b><li class="detail-text space-bottom-20px">How are the test sessions conducted?</li></b>
+            <p class="detail-text space-bottom-20px">Test sessions are led by user experience researchers in a 1x1 or small-group setting, ensuring that participants are fully engaged and supported. These sessions are typically up to an hour long. Residents will be asked a series of questions designed to guide them through exploring a website or an app and to get their feedback about things like how easy it was to find a certain resource or take a specific action, like download a document or check out a library book. Resident feedback from test sessions will be recorded in the form of written notes and (with consent) supplemental video/audio recordings, and included in a written report to the technology developers, so that they may take that feedback into account when iterating on that technology. The report will also be published online for transparency and knowledge-sharing purposes. No personally identifiable information (PII) will be released.</p>
+            <b><li class="detail-text space-bottom-20px">Where will test sessions be held?</li></b>
+            <p class="detail-text space-bottom-20px">Sessions will be held in accessible community centers, like local library branches; the actual location may vary, depending on the location of the test session participants. Snacks will also be provided at these test sessions, and we’re working to accommodate residents who need child care.</p>
+            <b><li class="detail-text space-bottom-20px">What languages will be supported for these test sessions?</li></b>
+            <p class="detail-text space-bottom-20px">We recognize that Seattle is a diverse city in which many residents’ first or preferred language may not be English. While our initial test sessions will be held in English, our signup form asks residents to indicate their preferred language so that we can work to identify researchers and translators who can accommodate other languages in future test sessions.</p>
+            <b><li class="detail-text">As a community partner, how can I help?</li></b>
+            <p class="detail-text space-bottom-10px">We’d love for you to help us spread the word about the Civic User Testing Group to your community! To do so, we have several different resources you can use:</p>
+            <div class="space-left-20px">
+              <ul class="step-by-step">
+                <li class="detail-text space-bottom-10px">Suggested text that you can post on your website, in an email blast, and on your social media accounts (see below)</li>
+                <li class="detail-text space-bottom-10px">Half-sheets and flyers that you can distribute, either virtually or as printouts. (We can provide printed copies for you!)</li>
+                <li class="detail-text space-bottom-10px">The CUTGroup website and signup form, where you can direct residents who are interested in signing up</li>
+              <ul>
+            </div>
+          </ul>
+          <p class="detail-text space-bottom-60px">Additionally, we’re happy to come to your community meetings and events to talk more about the CUTGroup, and we welcome any other suggestions you might have for how to reach your community.<br><br>In exchange for your support, we’ll list you as a community partner on our website and in all of our published reports. We’ll also send you an email when we have a new published report so that you can see how your community’s participation helped shape it, and we’ll send you updates when and if any changes to the technology have been made to incorporate that feedback.</p>
+          <p class="detail-text space-bottom-20px"><b>Examples and Downloads:</b></p>
+          <div class="flex flex-wrap space-bottom-60px">
+            <a href="resources/sample.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Sample Social Member Posts</a>
+            <a href="resources/half_sheet.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Half Sheet Explainer</a>
+            <a href="resources/flyer.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Seattle CUTGroup Flyer</a>
+          </div>
+        </div>
+      </div>
+      <div id="contact" class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary-gradient-2-transparentize-70-percent">
         <div class="container-51 space-top-100px space-bottom-20px">
           <h3 class="tag-text ">Contact Us</h3>
         </div>
         <div class="container-51 space-bottom-100px">
-          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:seattle.cutgroup@gmail.com" class="inline-link transition-all-200">seattle.cutgroup@gmail.com</a>.</p>
+          <p class="detail-text">Want to get in touch? Email us at <a href="mailto:seattle.cutgroup@gmail.com" class="inline-link-secondary transition-all-200">seattle.cutgroup@gmail.com</a>.</p>
         </div>
       </div>
       <div class="block-container flex align-center flex-center flex-wrap color-secondary color-bg-primary">
