typo in pdf link

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <p class="detail-text space-bottom-60px">Additionally, we’re happy to come to your community meetings and events to talk more about the CUTGroup, and we welcome any other suggestions you might have for how to reach your community.<br><br>In exchange for your support, we’ll list you as a community partner on our website and in all of our published reports. We’ll also send you an email when we have a new published report so that you can see how your community’s participation helped shape it, and we’ll send you updates when and if any changes to the technology have been made to incorporate that feedback.</p>
           <p class="detail-text space-bottom-20px"><b>Examples and Downloads:</b></p>
           <div class="flex flex-wrap space-bottom-60px">
-            <a href="resources/sample.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Sample Social Member Posts</a>
+            <a href="resources/sample.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Sample Social Media Posts</a>
             <a href="resources/half_sheet.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Half Sheet Explainer</a>
             <a href="resources/flyer.pdf" class="detail-text space-right-20px space-left-20px space-bottom-20px inline-link transition-all-200">Seattle CUTGroup Flyer</a>
           </div>
