--- a/index.html
+++ b/index.html
@@ -58,14 +58,11 @@
         </div>
         <div class="container-51 space-bottom-20px">
           <ul class="step-by-step">
-            <li class="detail-text space-bottom-20px">Fill out the form below to sign up. 
-              <ul class="step-by-step">
-            <li class="detail-text space-bottom-20px">Your data is collected through an encrypted collection form and stored in a secure database, provided by Typeform. We do not share personally identifiable information with any of our research partners (including the City of Seattle), and will never give or sell your data to third parties.</li>
-              </ul></li>  
-            <li class="detail-text space-bottom-20px">We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available. Depending on the test, we may ask you some questions to determine if you're eligible.</li>
-            <li class="detail-text space-bottom-20px">During the test session, a proctor will guide you through a series of questions and activities to get your feedback on a website or app created by the City of Seattle for residents.</li>
-            <li class="detail-text space-bottom-20px">After the test session, you'll receive a Visa gift card to compensate you for your time. The amount of the gift card depends on the length of the session. For the average half-hour test session, you will receive a $30 gift card.</li>
-            <li class="detail-text space-bottom-20px">You do <b>not</b> need to have any technology skills to participate!</li>
+            <li class="detail-text space-bottom-20px"><b>Fill out the form below to sign up.</b> Your data is collected through an encrypted collection form and stored in a secure database, provided by Typeform. We do not share personally identifiable information with any of our research partners (including the City of Seattle), and will never give or sell your data to third parties.</li>  
+            <li class="detail-text space-bottom-20px"><b>Check your email for a new testing opportunity.</b> We’ll send you an email when there’s a new testing opportunity, and you can join if you’re available. Depending on the test, we may ask you some questions to determine if you're eligible.</li>
+            <li class="detail-text space-bottom-20px"><b><Participate in a test session.</b> During the test session, a proctor will guide you through a series of questions and activities to get your feedback on a website or app created by the City of Seattle for residents.</li>
+            <li class="detail-text space-bottom-20px"><b><Receive a gift card.</b> After the test session, you'll receive a Visa gift card to compensate you for your time. The amount of the gift card depends on the length of the session. For the average half-hour test session, you will receive a $30 gift card.</li>
+            <li class="detail-text space-bottom-20px"><b>No technology skills necessary.</b> You do <b>not</b> need to have any prior technology skills to participate in a test session!</li>
           </ul>
         </div>
       </div>
